simpleserver/k8s-yamls/ingress-web.yaml
# Web ingress for simpleserver. See https://youtu.be/CL5Cxxz-yHo
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleserver-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
spec:
  rules:
    - host: greenseptember.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simpleserver
                port:
                  number: 8080
